--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
-    "prettier": "^3.6.2"
+    "method-override": "^3.0.0",
+    "mongoose": "^8.18.0",
+    "mongoose-slug-generator": "^1.0.4",
+    "prettier": "^3.6.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "husky": "^9.1.7",
