--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-handlebars": "^8.0.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.0",
+    "mongoose-delete": "^1.0.2",
     "mongoose-slug-generator": "^1.0.4",
     "prettier": "^3.6.2",
     "slugify": "^1.6.6"
